main box styles

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </head>
 
 <body>
-    <main>
+    <main class="main">
         <article>
-            <img src="">
+            <img src="avatar.png">
             <header>
                 <h1>
                     Imię i nazwisko</h1>
