--- a/index.html
+++ b/index.html
@@ -20,10 +20,13 @@
 
                 <p class="person__position">stanowisko</p>
             </header>
-            <p class="person__description">Programista z <strong class="special">kilkunastoletnim doświadczeniem</strong>, fotograf, operator drona, właściciel Sokoła Millennium (na
-                razie tylko z Lego), <strong class="special"> prelegent i szkoleniowiec</strong>. Uwielbia eksperymentować z nowymi technologiami, w
+            <p class="person__description person__description--with-margin">Programista z <strong class="special">kilkunastoletnim
+                    doświadczeniem</strong>, fotograf, operator drona, właściciel Sokoła Millennium (na
+                razie tylko z Lego), <strong class="special"> prelegent i szkoleniowiec</strong>. Uwielbia
+                eksperymentować z nowymi technologiami, w
                 swojej twórczości ocierając się o sztukę.</p>
-                <p class="person__description">W sieci: <a class="person__link" href="#">Facebook</a>, <a class="person__link" href="#">GitHub</a>, <a class="person__link" href="#">Instagram</a>.</p>
+            <p class="person__description">W sieci: <a class="person__link" href="#">Facebook</a>, <a
+                    class="person__link" href="#">GitHub</a>, <a class="person__link" href="#">Instagram</a>.</p>
         </article>
     </main>
 </body>
