--- a/index.html
+++ b/index.html
@@ -14,20 +14,22 @@
     <main class="main">
         <article class="person">
             <img class="person__picture" src="avatar.png">
+            <div>
             <header class="person__info">
                 <h1 class="person__name">
-                    Imię i nazwisko</h1>
+                    Michał Głos</h1>
 
-                <p class="person__position">stanowisko</p>
+                <p class="person__position">Uczeń mistrza Łukasza</p>
             </header>
-            <p class="person__description person__description--with-margin">Programista z <strong class="special">kilkunastoletnim
-                    doświadczeniem</strong>, fotograf, operator drona, właściciel Sokoła Millennium (na
-                razie tylko z Lego), <strong class="special"> prelegent i szkoleniowiec</strong>. Uwielbia
+            <p class="person__description person__description--with-margin">Programista z <strong class="special">kilkunastominutowym
+                    doświadczeniem</strong>, fotograf, miłośnik gier, właściciel Sokoła Millennium Accorda (na
+                razie tylko z Lego), <strong class="special"> uczeń i przyjaciel</strong>. Uwielbia
                 eksperymentować z nowymi technologiami, w
                 swojej twórczości ocierając się o sztukę.</p>
-            <p class="person__description">W sieci: <a class="person__link" href="#">Facebook</a>, <a
-                    class="person__link" href="#">GitHub</a>, <a class="person__link" href="#">Instagram</a>.</p>
-        </article>
+            <p class="person__description">W sieci: <a class="person__link" href="https://www.facebook.com/profile.php?id=100003192540720">Facebook</a>, <a
+                    class="person__link" href="https://github.com/Michal-Glos">GitHub</a>, <a class="person__link" href="https://www.instagram.com/glosfoto/">Instagram</a>.</p>
+                </div>
+                </article>
     </main>
 </body>
 
